# revokinator-site

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  askama.toml
layouts/: default.html
src/: config.rs  details.rs  error.rs  index.rs  main.rs  page_components.rs
src/rate_limiter/: mod.rs
src/repo/: mod.rs  revocation_candidate.rs  revocation_request.rs
templates/: faq.html  index.html
templates/details/: candidates.html  index.html  requests.html
