[package]
name = "revokinator-site"
version = "0.0.0"
edition = "2021"
rust-version = "1.77.0"

[dependencies]
actix-web = "4.9"
actix-web-rust-embed-responder = { version = "2.2" }
askama = "0.12"
askama_actix = "0.14"
css-inline = "0.14"
deadpool = { version = "0.12" }
deadpool-postgres = { version = "0.14" }
file-mode = "0.1"
futures-util = "0.3"
governor = "0.6"
hmac = "0.12"
nonzero_ext = "0.3"
parking_lot = { version = "0.12", features = ["arc_lock"] }
rand = "0.8"
rand_core = "0.6"
regex_static = "0.1"
rust-embed-for-web = { version = "11.1" }
secrecy = "0.8"
serde = "1.0"
serde_json = "1.0"
service-skeleton = "0.5"
thiserror = "1.0"
time = "0.3"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-actix-web = "0.7"
url = "2.0"
uuid = "1.0"

[lints.rust]
future_incompatible = { level = "warn", priority = -100 }
let_underscore = { level = "warn", priority = -100 }
unused = { level = "warn", priority = -100 }

dead_code = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
keyword_idents = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Yikes... https://github.com/rust-lang/rust-clippy/issues/11830
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

alloc_instead_of_core = "warn"
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
expect_used = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
integer_division = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
non_ascii_literal = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "warn"
use_debug = "warn"
wildcard_enum_match_arm = "warn"

similar_names = "allow"
cargo_common_metadata = "allow"
